--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting</title>
-    <link type="text/css" rel="stylesheet" href="Styles/rafting.css" />
+    <link type="text/css" rel="stylesheet" href="rafting.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Red+Hat+Mono:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="images/rapidslogo.jpg" alt="White Water Rafting logo" width="120" height="120">
+        <img src="rapidslogo.jpg" alt="White Water Rafting logo" width="120" height="120">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
@@ -21,12 +21,12 @@
     </header>
     <main>
     <div class="hero">
-        <img src="images/salmonriverrafting.jpg" alt="Enjoy the ride in every moment" width="1000" height="550">
+        <img src="salmonriverrafting.jpg" alt="Enjoy the ride in every moment" width="1000" height="550">
     <h1>
      White Water Rafting 
     </h1>
     <article>
-        <img src="images/AyungWhiteWaterRafting.jpg" alt="People on the ride" width="200" height="200">
+        <img src="AyungWhiteWaterRafting.jpg" alt="People on the ride" width="200" height="200">
         <p>Enjoy the ride at every moment!</p>
     </article>
     </div>
@@ -38,24 +38,24 @@
      </section>
      <section>
         <h2>Adventure Awaits You!</h2>
-        <img src="images/rafting13_1024.jpg" alt="On board" width="200" height="200">
-        <img src="images/rafting15_600.jpg" alt="In Action" width="200" height="200">
-        <img src="images/rafting65_600.jpg" alt="Boarding group" width="200" height="200">
-        <img src="images/rafting59_600.jpg" alt="Action mood" width="200" height="200">
-        <img src="images/rafting64_600.jpg" alt="Boarding Action"   width="200" height="200">
+        <img src="rafting13_1024.jpg" alt="On board" width="200" height="200">
+        <img src="rafting15_600.jpg" alt="In Action" width="200" height="200">
+        <img src="rafting65_600.jpg" alt="Boarding group" width="200" height="200">
+        <img src="rafting59_600.jpg" alt="Action mood" width="200" height="200">
+        <img src="rafting64_600.jpg" alt="Boarding Action"   width="200" height="200">
      </section>
     </main>
     <footer>
     <p>&copy;2024 November | White Water Rafting | Moses Kracar-Tee Norris</p>
     <nav class="sociallinks">
      <a href="https://www.linkedin.com/in/moses-k-t-norris-a22787139/">
-        <img src="images/linkedin.png" alt="LinkedIn" width="50" height="50">
+        <img src="linkedin.png" alt="LinkedIn" width="50" height="50">
      </a>
      <a href="https://www.facebook.com/profile.php?id=100063755982432">
-        <img src="images/facebook.png" alt="Facebook" width="50" height="50">
+        <img src="facebook.png" alt="Facebook" width="50" height="50">
      </a>
      <a href="https://www.instagram.com/moseskracartee/?hl=en">
-        <img src="images/instagram.png" alt="Instagram" width="50" height="50">
+        <img src="instagram.png" alt="Instagram" width="50" height="50">
      </a>
     </nav>
     </footer>
