--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
      White Water Rafting 
     </h1>
     <article>
+        <h2>Welcome on board</h2>
         <img src="AyungWhiteWaterRafting.jpg" alt="People on the ride" width="200" height="200">
         <p>Enjoy the ride at every moment!</p>
     </article>
